# doc_parser

./: .gitignore  Dockerfile  image_result.json  pyproject.toml  pytest.ini
.github/workflows/: develop.yml  release.yml
build-script/: doc-parser-build.config  paddle-ocr-build.config
configs/: gunicorn_conf.py  supervisor.conf
doc_preprocessors/: __init__.py  attachment_processor.py  attachment_processor_origin.py  basic_processor.py  basic_processor_origin.py  intelligent_processor.py  intelligent_processor_origin.py  test.py  visualization.py  vlmlayout_processor.py
doc_preprocessors/gitbook_doc/: intelligent.md  intelligent_json.md  intelligent_law.md  intro.md
doc_preprocessors/legacy/: visualization_image.py  visualization_item.py  visualization_type.py  적재용(규정).py  적재용(규정)v2.py  적재용(내부).py  적재용(외부)_ocr.py
doc_preprocessors/삼성증권/: test.py  문서생성_범용에이전트.py  문서생성_범용에이전트_ocr.py  이미지판독.py  채팅_범용에이전트.py
docling/: document_converter.py
docling/backend/: csv_backend.py  genos_msword_backend.py  html_backend.py  hwp_backend.py  md_backend.py  mspowerpoint_backend.py  pymupdf_backend.py
docling/cli/: main.py
docling/datamodel/: base_models.py  document.py  layout_model_specs.py  pipeline_options.py
docling/models/: dots_ocr_layout_model.py  readingorder_model.py  vlm_layout_model.py
docling/pipeline/: base_pipeline.py  standard_pdf_pipeline.py  vlm_layout_pipeline.py
docling/prompts/: prompt_manager.py
docling/utils/: document_enrichment.py  dotsocr_postprocessor.py  model_downloader.py  vlmlayout_postprocessor.py
docs/installation/: index.md
examples/asr_pipeline_performance_comparison/: index.html
examples/batch_convert/: index.html
examples/compare_vlm_models/: index.html
examples/custom_convert/: index.html
examples/demo_layout_vlm/: index.html
examples/develop_formula_understanding/: index.html
examples/develop_picture_enrichment/: index.html
examples/enrich_doclingdocument/: index.html
examples/enrich_simple_pipeline/: index.html
examples/export_figures/: index.html
examples/export_multimodal/: index.html
examples/export_tables/: index.html
examples/full_page_ocr/: index.html
examples/gpu_standard_pipeline/: index.html
examples/gpu_vlm_pipeline/: index.html
examples/granitedocling_repetition_stopping/: index.html
examples/inspect_picture_content/: index.html
examples/minimal/: index.html
examples/minimal_asr_pipeline/: index.html
genon/preprocessor/: pyproject.toml
genon/preprocessor/docker/: Dockerfile
genon/preprocessor/facade/: intelligent_processor_law.py  intelligent_processor_ocr.py
genon/preprocessor/scripts/: register.config  register_image.sh
genos-tools/: README.md  config.toml  pyproject.toml
genos-tools/genos_tools/: cli.py  config.py
genos-tools/genos_tools/commands/: export_chunks.py
genos_di/: law_preprocess_genos.py  preprocess.py
sample_files/: dupli.docx  duplicated_table.docx  sample.csv  sample2.md  samsung_research.docx  머리글테스트.docx
tests/: multi_format.py
tests_our/: conftest.py
(+76 files in other folders)
